# metanetx-assets

./: .gitattributes  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: cron.yml  main.yml
src/metanetx_assets/: __init__.py  _version.py  cli.py  helpers.py
src/metanetx_assets/api/: __init__.py  compartment.py  compound.py  namespace.py  reaction.py
src/metanetx_assets/cli/: __init__.py  cli.py  compartment.py  compound.py  namespace.py  reaction.py
src/metanetx_assets/etl/: __init__.py  chemicals.py  compartments.py  compound.py  generate_reaction_names.py  helpers.py  namespace.py  reaction.py
src/metanetx_assets/model/: __init__.py  identifiers_org_namespace_model.py  identifiers_org_registry_model.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
tests/test_unit/etl/: test_reaction.py
tests/test_unit/etl/data/: sample_equations.txt
