[metadata]
name = metanetx-assets
url = https://github.com/Midnighter/metanetx-assets
download_url = https://pypi.org/project/metanetx-assets/
project_urls =
    Source Code = https://github.com/Midnighter/metanetx-assets
    Bug Tracker = https://github.com/Midnighter/metanetx-assets/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Transform MetaNetX components information and load them into SQL storage.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    MetaNetX
    SQL
    COBRA

[options]
zip_safe = True
install_requires =
    click~=7.0
    click-log~=0.3
    cobra-component-models~=0.6
    depinfo~=1.5
    httpx~=0.16
    pandas~=1.0
    pydantic~=1.6
    pyparsing~=2.4
    SQLAlchemy~=1.3
    tqdm~=4.0
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mnx-assets = metanetx_assets.cli.cli:cli

[options.extras_require]
development =
    black
    isort
    pep517
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/metanetx_assets/_version.py
versionfile_build = metanetx_assets/_version.py
tag_prefix =

